--- a/Hipoten/HipotenochasClass/app/src/main/res/values-en-rUS/strings.xml
+++ b/Hipoten/HipotenochasClass/app/src/main/res/values-en-rUS/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">HipotenochasClass</string>
     <string name="nivel">level</string>
